<resources>
    <string name="app_name">Zqc</string>
    <string name="usernamenull">The user name cannot be empty</string>
    <string name="passworenull">The password cannot be empty</string>
    <string name="nameorpwwrong">User name or password error</string>
    <string name="username">UserName:</string>
    <string name="password">PassWord:</string>
    <string name="inputusername">Please Input UserName</string>
    <string name="inputpassword">Please Input PassWord</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="check">Check</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirm">Confirm:</string>
    <string name="currentaddress">current address</string>
    <string name="location">Location</string>
    <string name="toast_exit_confirm">Quit On Double Click</string>
</resources>
