<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/pic1"
    android:padding="5dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
<LinearLayout
    android:layout_below="@+id/ll_welcome"
    android:id="@+id/llusername"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/et_putinname"
        android:layout_width="0dp"
        android:hint="@string/inputusername"
        android:layout_height="wrap_content"
        android:layout_weight="3"/>
    <Button
        android:id="@+id/btn_checkname"
        android:text="@string/check"
        android:layout_width="0dp"
        android:background="@drawable/shape"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>
    <LinearLayout
        android:layout_below="@+id/llusername"
        android:id="@+id/ll_pw1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:text="@string/password"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/et_pw1"
            android:hint="@string/inputpassword"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ll_pw1"
        android:id="@+id/llpw2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:text="@string/confirm"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/et_pw2"
            android:hint="@string/confirmpassword"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:layout_below="@+id/llpw2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:id="@+id/btn_signup"
        android:text="@string/signup"
        android:background="@drawable/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>