<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/pic1"
    tools:context="com.example.hp0331.zqc.activity.LoginActivity">
    <LinearLayout
        android:id="@+id/ll_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ll_welcome"
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username"
            android:text="@string/username"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/et_username"
            android:hint="@string/inputusername"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

           />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_below="@+id/ll_username"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password"
            android:text="@string/password"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/inputpassword"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_below="@+id/ll_password"
        android:background="@drawable/shape"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_login"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_forgetpw"
            android:text="@string/forgetpassword"
            android:layout_marginLeft="15dp"
            android:autoLink="all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_signup"
            android:text="@string/signup"
            android:autoLink="all"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.example.hp0331.zqc.view.MyViewCircle
        android:id="@+id/mycircle"
        android:layout_below="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

</RelativeLayout>
